# SlimeChunkFinder

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.txt  main.c  readme.md  slimechunk.c  slimechunk.h  slimechunkfinder.c  slimechunkfinder.h  test.c
src/: chunk.rs  finder.rs  main.rs  slime_chunk.rs
