cargo-features = ["profile-rustflags"]

[package]
name = "slime_chunk_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_with = "3.14.1"

[profile.release]
lto = "fat"
codegen-units = 1
rustflags = ["-C", "target-cpu=native"]
debug = true
